# gaussian-process-cpp

./: .func.cpp.swp  .func.h.swp  CMakeLists.txt  func.h  func_test.cpp  main.cpp  out-train.txt  run.sh
Gp/: CMakeLists.txt  GP_Model.cpp  GP_Model.h  kernel.cpp  kernel.h
Maths/: CMakeLists.txt  CMakeLists.txt.save  grad_decent.cpp  grad_decent.h
Utils/: CMakeLists.txt  utils.cpp  utils.h
data/: test_data.txt  train_data.txt
data/test/: input.txt
data/train/: input.txt  output.txt
test/: CMakeLists.txt  test_funcs.cpp
